--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
@@ -417,6 +417,7 @@
     <Text Include="..\..\..\..\Assets\Gui\topic-leaf-left.txt" />
     <Text Include="..\..\..\..\Assets\Gui\topic-leaf-right.txt" />
     <Text Include="..\..\..\..\Assets\Gui\topic-leaves.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\topic-tree.txt" />
     <Text Include="..\..\..\..\Assets\Shaders\opengl\gui-frag.txt" />
     <Text Include="..\..\..\..\Assets\Shaders\opengl\gui-vert.txt" />
     <Text Include="..\..\..\..\Docs\bugs.txt" />
