Main menu: create tree/leaves programatically from Topic list

--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj.filters
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj.filters
@@ -435,5 +435,8 @@
     <Text Include="..\..\..\..\Assets\Gui\topic-tree.txt">
       <Filter>Assets\Gui</Filter>
     </Text>
+    <Text Include="..\..\..\..\Assets\Gui\stroke-branch.txt">
+      <Filter>Assets\Gui\Stroke</Filter>
+    </Text>
   </ItemGroup>
 </Project>
