--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
@@ -405,6 +405,7 @@
     <Text Include="..\..\..\..\Assets\Gui\page_play_notes.txt" />
     <Text Include="..\..\..\..\Assets\Gui\pie.txt" />
     <Text Include="..\..\..\..\Assets\Gui\quit-confirm.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\stroke-branch.txt" />
     <Text Include="..\..\..\..\Assets\Gui\stroke-cross-1.txt" />
     <Text Include="..\..\..\..\Assets\Gui\stroke-cross-2.txt" />
     <Text Include="..\..\..\..\Assets\Gui\stroke-main-menu-1.txt" />
