GUI files for landscape orientation

--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
@@ -391,6 +391,7 @@
     <Text Include="..\..\..\..\Assets\Gui\gs_main_menu.txt" />
     <Text Include="..\..\..\..\Assets\Gui\gs_main_menu_corridor.txt" />
     <Text Include="..\..\..\..\Assets\Gui\gs_pages.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\gs_pages_landscape.txt" />
     <Text Include="..\..\..\..\Assets\Gui\gs_play_notes.txt" />
     <Text Include="..\..\..\..\Assets\Gui\gs_score.txt" />
     <Text Include="..\..\..\..\Assets\Gui\gs_test_show_score.txt" />
@@ -399,15 +400,23 @@
     <Text Include="..\..\..\..\Assets\Gui\gs_topic_start.txt" />
     <Text Include="..\..\..\..\Assets\Gui\gs_user_draw.txt" />
     <Text Include="..\..\..\..\Assets\Gui\gui-top-bar.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\gui_top_bar_landscape.txt" />
     <Text Include="..\..\..\..\Assets\Gui\keyboard.txt" />
     <Text Include="..\..\..\..\Assets\Gui\mcq-buttons-square-symbol.txt" />
     <Text Include="..\..\..\..\Assets\Gui\mcq-buttons-wide.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\mcq_buttons_square_symbol_landscape.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\mcq_buttons_wide_landscape.txt" />
     <Text Include="..\..\..\..\Assets\Gui\music-score-bg.txt" />
     <Text Include="..\..\..\..\Assets\Gui\page_interval.txt" />
-    <Text Include="..\..\..\..\Assets\Gui\page_musical_symbol.txt" />
-    <Text Include="..\..\..\..\Assets\Gui\page_musical_term.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\page_symbol_symbol_4.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\page_symbol_symbol_4_landscape.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\page_symbol_text_4.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\page_symbol_text_4_landscape.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\page_text_symbol_4_landscape.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\page_text_text_4.txt" />
     <Text Include="..\..\..\..\Assets\Gui\page_play_notes.txt" />
     <Text Include="..\..\..\..\Assets\Gui\page_text_symbol_4.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\page_text_text_4_landscape.txt" />
     <Text Include="..\..\..\..\Assets\Gui\pie.txt" />
     <Text Include="..\..\..\..\Assets\Gui\quit-confirm.txt" />
     <Text Include="..\..\..\..\Assets\Gui\stroke-branch.txt" />
@@ -420,10 +429,6 @@
     <Text Include="..\..\..\..\Assets\Gui\stroke-test-2.txt" />
     <Text Include="..\..\..\..\Assets\Gui\stroke-tick-1.txt" />
     <Text Include="..\..\..\..\Assets\Gui\title-text.txt" />
-    <Text Include="..\..\..\..\Assets\Gui\topic-leaf-left.txt" />
-    <Text Include="..\..\..\..\Assets\Gui\topic-leaf-right.txt" />
-    <Text Include="..\..\..\..\Assets\Gui\topic-leaves.txt" />
-    <Text Include="..\..\..\..\Assets\Gui\topic-tree.txt" />
     <Text Include="..\..\..\..\Assets\Gui\topic_door_1.txt" />
     <Text Include="..\..\..\..\Assets\Shaders\opengl\gui-frag.txt" />
     <Text Include="..\..\..\..\Assets\Shaders\opengl\gui-vert.txt" />
