--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
@@ -419,6 +419,7 @@
     <Text Include="..\..\..\..\Assets\Gui\page_text_symbol_4.txt" />
     <Text Include="..\..\..\..\Assets\Gui\page_text_text_4_landscape.txt" />
     <Text Include="..\..\..\..\Assets\Gui\pie.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\question_symbol_landscape.txt" />
     <Text Include="..\..\..\..\Assets\Gui\question_text_landscape.txt" />
     <Text Include="..\..\..\..\Assets\Gui\quit-confirm.txt" />
     <Text Include="..\..\..\..\Assets\Gui\stroke-branch.txt" />
