--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
@@ -407,6 +407,7 @@
     <Text Include="..\..\..\..\Assets\Gui\mcq_buttons_square_symbol_landscape.txt" />
     <Text Include="..\..\..\..\Assets\Gui\mcq_buttons_wide_landscape.txt" />
     <Text Include="..\..\..\..\Assets\Gui\music-score-bg.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\music_score_bg_landscape.txt" />
     <Text Include="..\..\..\..\Assets\Gui\page_interval.txt" />
     <Text Include="..\..\..\..\Assets\Gui\page_symbol_symbol_4.txt" />
     <Text Include="..\..\..\..\Assets\Gui\page_symbol_symbol_4_landscape.txt" />
