--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj.filters
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClCompile Include="..\..\..\..\Source\GSBase3d.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Source\Hints.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Library Include="..\..\..\..\..\amjulib\3rdPartyLibs\Bass\Bass2.3\Win\bass.lib">
@@ -305,6 +308,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\Source\GSBase3d.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\Source\Hints.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -536,6 +542,9 @@
     </Text>
     <Text Include="..\..\..\..\Assets\Shaders\opengl\rotating-vert.txt">
       <Filter>Assets\Shaders\opengl</Filter>
+    </Text>
+    <Text Include="..\..\..\..\Assets\Scene\corridor-one-door.txt">
+      <Filter>Assets\Scene</Filter>
     </Text>
   </ItemGroup>
 </Project>
