--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Source/ThirdParty/googletest/msvc/gtest.sdf
 Source/ThirdParty/googletest/msvc/gtest.v12.suo
 *.jbf
 Script/Msvc/AmjulaMusicTheory/.vs/
+Assets/Maya/.mayaSwatches/
